Replace page severity with critical

--- a/modules/nixos/watchtower/prometheus/ups-rules.yml
+++ b/modules/nixos/watchtower/prometheus/ups-rules.yml
@@ -6,4 +6,4 @@ groups:
       - alert: UpsOnBattery
         expr: network_ups_tools_ups_status{flag="OB"} == 1
         labels:
-          severity: page
+          severity: critical
