--- a/modules/nixos/watchtower/prometheus/node-rules.yml
+++ b/modules/nixos/watchtower/prometheus/node-rules.yml
@@ -5,7 +5,7 @@ groups:
         expr: up{job="node"} == 0
         for: 5m
         labels:
-          severity: page
+          severity: critical
         annotations:
           summary: Instance {{ $labels.instance }} down
           description: '{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 5 minutes.'
@@ -13,7 +13,7 @@ groups:
         expr: node_systemd_unit_state{state="failed"} > 0
         for: 10m
         labels:
-          severity: page
+          severity: critical
         annotations:
           description: Instance {{ $labels.instance }} service {{ $labels.name }} is in failed state.
       - alert: DiskWillFillIn1Day
