--- a/modules/nixos/watchtower/prometheus/pbs-rules.yml
+++ b/modules/nixos/watchtower/prometheus/pbs-rules.yml
@@ -14,18 +14,18 @@ groups:
         labels:
           serverity: warning
         annotations:
-          summary: "Daily backup overdue for {{ $labels.vm_name }} on {{ $labels.instance }}: {{ $value }}"
+          summary: "Daily backup overdue for {{ $labels.vm_id }} on {{ $labels.instance }}: {{ printf \"%.1f\" $value }}"
       - alert: WeeklyBackupOverdue
         expr: (time() - pbs_snapshot_vm_last_timestamp{namespace="weekly"}) / (3600) > 168
         for: 1h
         labels:
           serverity: warning
         annotations:
-          summary: "Weekly backup overdue for {{ $labels.vm_name }} on {{ $labels.instance }}: {{ $value }}"
+          summary: "Weekly backup overdue for {{ $labels.vm_id }} on {{ $labels.instance }}: {{ printf \"%.1f\" $value }}"
       - alert: MonthlyBackupOverdue
         expr: (time() - pbs_snapshot_vm_last_timestamp{namespace="monthly"}) / (3600) > 840 # 35 days is max 1st Sat -> 1st Sat
         for: 1h
         labels:
           serverity: warning
         annotations:
-          summary: "Monthly backup overdue for {{ $labels.vm_name }} on {{ $labels.instance }}: {{ $value }}"
+          summary: "Monthly backup overdue for {{ $labels.vm_id }} on {{ $labels.instance }}: {{ printf \"%.1f\" $value }}"
